--- a/themes/bilberry-hugo-theme/assets/sass/_bilberry-hugo-theme.scss
+++ b/themes/bilberry-hugo-theme/assets/sass/_bilberry-hugo-theme.scss
@@ -2,7 +2,7 @@
 
 .bilberry-hugo-theme {
     background-color:$page-background-color;
-    font-family: "Raleway";
+    font-family: "Open Sans";
     color: $text-color;
     font-size: 1.6em;
 
