--- a/themes/bilberry-hugo-theme/assets/sass/_variables.scss
+++ b/themes/bilberry-hugo-theme/assets/sass/_variables.scss
@@ -3,7 +3,7 @@
 $site-width: 800px;
 
 $headline-font: 'Comfortaa', sans-serif;
-$content-font: 'Open Sans', sans-serif;
+$content-font: 'Comfortaa', sans-serif;
 $article-footer-font: 'Fira Code', monospace;
 
 // main colors
